iptables.rules
# Generated by iptables-save v1.6.1 on Sat Nov 10 19:30:57 2018
*mangle
:PREROUTING ACCEPT [5925:2996030]
:INPUT ACCEPT [5925:2996030]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5979:842671]
:POSTROUTING ACCEPT [6088:850803]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Sat Nov 10 19:30:57 2018
# Generated by iptables-save v1.6.1 on Sat Nov 10 19:30:57 2018
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [4:279]
:POSTROUTING ACCEPT [3:206]
-A POSTROUTING -o enp2s0 -j MASQUERADE
COMMIT
# Completed on Sat Nov 10 19:30:57 2018
# Generated by iptables-save v1.6.1 on Sat Nov 10 19:30:57 2018
*filter
:INPUT ACCEPT [15:1143]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [20:1471]
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -s 192.168.0.0/24 -i vs -o enp2s0 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
COMMIT
# Completed on Sat Nov 10 19:30:57 2018
